<resources>
    <string name="app_name">Menu Order</string>
    <string name="enter_name">Enter Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="strawberry_syrup">Strawberry Syrup</string>
    <string name="vanilla_syrup">Vanilla Syrup</string>
    <string name="chocolate">Chocolate</string>
    <string name="milk_powder">Milk Powder</string>
    <string name="quantity">Quantity</string>
    <string name="decrement">Decrement</string>
    <string name="_0">0</string>
    <string name="increment">Increment</string>
    <string name="order_summary">Order Summary</string>
    <string name="total">Total</string>
    <string name="order">Order</string>
    <string name="_increment">-</string>
    <string name="_decrement">-</string>
    <string name="_increments">+</string>
</resources>
