<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B2DFDB"
        tools:context="com.teamandroidangel.iamangelauditor.menuorder.MainActivity">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:hint="@string/enter_name"
                android:inputType="textCapWords"
                android:textSize="30sp"/>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings" />

            <CheckBox
                android:id="@+id/whippedCreamId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:paddingLeft="25dp"
                android:text="@string/whipped_cream" />
            <CheckBox
                android:id="@+id/strawberrySyrupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:paddingLeft="25dp"
                android:text="@string/strawberry_syrup"/>
            <CheckBox
                android:id="@+id/vanillaSyrupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:paddingLeft="25dp"
                android:text="@string/vanilla_syrup"/>

            <CheckBox
                android:id="@+id/chocolateId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:paddingLeft="25dp"
                android:text="@string/chocolate"/>

            <CheckBox
                android:id="@+id/milkPowder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:paddingLeft="25dp"
                android:text="@string/milk_powder"/>

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginBottom="20dp"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="#009688"
                    android:onClick="decrement"
                    android:text="@string/_decrement" />

                <TextView
                    android:id="@+id/quantityTextView"
                    style="@style/HeaderTextStyle"
                    android:layout_marginBottom="20sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/_0" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="#009688"
                    android:onClick="increment"
                    android:text="@string/_increments" />

            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginTop="16dp"
                android:text="@string/order_summary" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/total"
                android:textColor="#000000"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#009688"
                android:onClick="submitOrder"
                android:text="@string/order" />

        </LinearLayout>
    </ScrollView>
